--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
 <body>
-  <app-root></app-root>
+<header style="margin-bottom: 20px">
+  Angular In Depth
+  http://blog.angularindepth.com
+</header>
+<app-root></app-root>
 </body>
 </html>
